--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app{
+    margin: 0px;
+    padding: 0px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.wholecontainer{
+    display: flex;
+    flex-direction: row;
+    margin: 0px;
+    background-color: black;
 }
-
-.App-link {
-  color: #61dafb;
+.seconditem{
+    display: block;
+    padding: 0px;
+    margin: 0px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grid{
+    margin: 0px;
+    padding: 0px;
+}
+.sidebar{
+    padding-left: 14px;
+    padding-right: 14px;
+    padding-top: 50px;
+    margin: 0px;
+}
+.logo{
+    width: 119px;
+    height: 104px;
+}
+.logo img{
+    width: 100%;
+    height: 100%;
+}
+.links{
+    padding: 10px;
+    margin-top: 17px;
+}
+.links link{
+    text-decoration: none;
+    color: black;
+}
+.container{
+    background-color: black;
+    border-bottom: 1px;
+    box-shadow: 1px 4px 2px rgba(0,0,0,0.25);
+    margin-top: 48px;
+    padding-left: 280px;
+    padding-top: 20px;
+    padding-right: 280px;
+}
+.top{
+    display: grid;
+    grid-template-rows: auto auto auto;
 }
